[package]
name = "aoe2-probe"
version = "0.1.0"
authors = ["tazi"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
aoe2-probe = { git = "https://github.com/ptazithos/aoe2-probe", branch = "wasm-support" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
